--- a/Places.html
+++ b/Places.html
@@ -16,7 +16,7 @@
   </header>
   <nav>
 <div class="menu-wrapper">
-    <img class="icon" href="default.asp" src="images/logo.jpg", height="42", weight="46" >
+    <img class="icon" href="default.asp" src="images/Logo.jpg", height="42", weight="46" >
     <li><a href="Home.html">Home</a></li>
     <li><a href="Places.html">Events</a></li>
     <li><a href="Contact.html">Contact Us</a></li>
